# shimeji-os

./: .gitignore  Dockerfile  Makefile
bootloader/: Cargo.toml
bootloader/.cargo/: config.toml
bootloader/src/: main.rs
kernel/: Cargo.toml  x86_64-unknown-none-shimejios.json
kernel/.cargo/: config.toml
kernel/src/: main.rs
