[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = { version = "0.15.2", features = ["exts", "alloc", "logger"] }
uefi-services = "0.12.1"
log = { version = "0.4.16", default-features = false }
